	4.1-4	
-------------------------------------
$vmMemoryOffset if configured, is now displayed in yellow(-ish) in
the host memory usage graph.
http://code.google.com/p/phpvirtualbox/issues/detail?id=414

Fixed bug that would throw a VirtualBox error when cloning the
"Current State" item of a virtual machine on the Snapshot tab.

Fixed regression bug that would show all USB devices as being
attached in the USB Devices section of the Settings toolbar menu.

Fixed bug that would cause an error when "USB Devices" was clicked
in the Settings toolbar menu.

Minor UI changes.

Fixed Export Appliance wizard so that it now displays the correct
Export Appliance instructions rather than the Import Appliance
wizard instructions.

-------------------------------------
	4.1-3	2011-9-20
-------------------------------------
Added Polish translation.

Fixed 4.1-0 regression bug that would not allow runtime attachment
of USB devices from the Settings menu in the toolbar.

Fixed 4.1-1 regression bug that would not allow one to edit
existing USB filters for a running VM.

Better handling of CD/DVD medium changes when 'Live CD/DVD' is not
selected for a medium attachment.

Less context menu levels for removable media attachments in the
Settings toolbar button menu of a running VM when the VM only has 1
removable media attachment of the a given type (CD/DVD and Floppy).

Improved Guest Additions installation handling.

Added test to check that PHP files are being parsed as PHP and
associated error message if not.

Added Parallels hard disk image format creation support. Available
hard disk formats and their capabilities are now programmatically
obtained through the VirtualBox API.

Minor translation fixes.

Advanced acceleration options are now correctly hidden when
enableAdvancedConfig is not enabled in config.php.

Login form on console tab is now hidden if remote console
authentication is set to None. This should avoid some confusion.
